tests/fail/cede_borrowed.stderr
error[E0440]: Cannot move 'p' while it is borrowed
 --> tests/fail/cede_borrowed.tk:8:16
   |
 8 |     auto ^p2 = cede p
   |                ^
error[E0459]: Implicit heap-boxing via pointer initialization is prohibited. Use explicit allocation like 'new Data(...)' stringently
 --> tests/fail/cede_borrowed.tk:8:11
   |
 8 |     auto ^p2 = cede p
   |           ^
